src/objects/Service_Catalog_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>CalendarId__c</fullName>
        <label>CalendarId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CalendarURL__c</fullName>
        <label>CalendarURL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>ChatterId__c</fullName>
        <label>ChatterId</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>catalogEntryUrlConst__c</fullName>
        <label>catalogEntryUrlConst</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>coveoSrchStr1__c</fullName>
        <label>coveoSrchStr1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>coveoSrchStr2__c</fullName>
        <label>coveoSrchStr2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>coveoSrchStr3__c</fullName>
        <label>coveoSrchStr3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>linkMyCatEntriesURL__c</fullName>
        <label>linkMyCatEntriesURL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vw_AECOMIntellectualProperty__c</fullName>
        <label>vw_AECOMIntellectualProperty</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vw_ApplicationDevelopmentMobile__c</fullName>
        <label>vw_ApplicationDevelopmentMobile</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vw_AssetManagementSolutions__c</fullName>
        <label>vw_AssetManagementSolutions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vw_BIM__c</fullName>
        <label>vw_BIM</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vw_CatEntriesByCategory_base__c</fullName>
        <label>vw_CatEntriesByCategory_base</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vw_Certifications__c</fullName>
        <label>vw_Certifications</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vw_CloudInfrastructureServices__c</fullName>
        <label>vw_CloudInfrastructureServices</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vw_ConvergedResilience__c</fullName>
        <label>vw_ConvergedResilience</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vw_ITOperationsSupportServices__c</fullName>
        <label>vw_ITOperationsSupportServices</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vw_ImmersiveTechnologyVisualization__c</fullName>
        <label>vw_ImmersiveTechnologyVisualization</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vw_InfoDataManagementservices__c</fullName>
        <label>vw_InfoDataManagementservices</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vw_SensorsRemoteMonitoringSmartCities__c</fullName>
        <label>vw_SensorsRemoteMonitoringSmartCities</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Service_Catalog_Settings</label>
</CustomObject>